# flutter-opencv-stream-processing-master

native_opencv/android/: CMakeLists.txt  build.gradle
opencv_app/android/app/src/main/: AndroidManifest.xml
opencv_app/lib/: main.dart
opencv_app/test/: widget_test.dart
